--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -94,6 +94,7 @@ h6 {
   text-transform: uppercase;
   font-weight: 500;
   letter-spacing: 1px;
+  transition: 0.4s;
 }
 
 .navbar a:hover {
@@ -272,6 +273,7 @@ header {
     text-transform: uppercase;
     font-weight: 500;
     letter-spacing: 1px;
+    transition: 0.4s;
   }
 }
 
@@ -293,6 +295,7 @@ header {
     text-transform: uppercase;
     font-weight: 500;
     letter-spacing: 1px;
+    transition: 0.4s;
   }
 
   #hero h1 {
@@ -325,6 +328,7 @@ header {
     text-transform: uppercase;
     font-weight: 500;
     letter-spacing: 1px;
+    transition: 0.4s;
   }
 
   #hero h1 {
@@ -357,6 +361,7 @@ header {
     text-transform: uppercase;
     font-weight: 500;
     letter-spacing: 1px;
+    transition: 0.4s;
   }
 
   #hero h1 {
@@ -389,6 +394,7 @@ header {
     text-transform: uppercase;
     font-weight: 500;
     letter-spacing: 1px;
+    transition: 0.4s;
   }
 
   #hero h1 {
@@ -478,7 +484,7 @@ section {
 .about .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: rgba(5, 13, 24, 0.3);
+  color: #dce8f8b4;
 }
 
 .about .content ul {
@@ -785,17 +791,33 @@ section {
 @-webkit-keyframes animate-loading {
   0% {
     transform: rotate(0deg);
-  }
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+}
   100% {
     transform: rotate(360deg);
-  }
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+}
 }
 
 @keyframes animate-loading {
   0% {
     transform: rotate(0deg);
-  }
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+}
   100% {
     transform: rotate(360deg);
-  }
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+}
 }
